--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <!-- Masthead-->
         <header class="masthead">
             <div class="container">
-                <div class="masthead-subheading" style="color: gold;">Eu me chamo Rafaela Campos de Souza tenho 28 anos, casada, mãe de 4 filhos sou formada em tec. Administrativo</div>
+                <div class="masthead-subheading" style="color: blue;">Eu me chamo Rafaela Campos de Souza tenho 28 anos, casada, mãe de 4 filhos sou formada em tec. Administrativo</div>
                 <a class="btn btn-primary btn-xl text-uppercase" href="#about">Conheça-me mais</a>
             </div>
         </header>        
